fix overflow

--- a/src/App.css
+++ b/src/App.css
@@ -54,7 +54,6 @@ button {
   justify-content: flex-start;
   font-size: calc(10px + 2vmin);
   color: #434343;
-  min-width: 410px;
 }
 
 .App-link {
