--- a/src/components/landing/homeStyle.css
+++ b/src/components/landing/homeStyle.css
@@ -5,7 +5,6 @@
     max-width: 768px;
     margin: auto;
     padding: 25px;
-    min-width: 360px;
   }
   .home-grid-name-label { grid-row-start: 1 }
   .home-grid-name-input { grid-row-start: 2 }
